deploy/events-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: events-db
spec:
  serviceName: events-db
  replicas: 1
  selector:
    matchLabels:
      myevents/app: events
      myevents/tier: database # Ensure that the selector labels match the template labels
  template:
    metadata:
      labels:
        myevents/app: events
        myevents/tier: database
    spec:
      containers:
      - name: mongo
        image: mongo:6.0.6
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
