deploy/events-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events
spec:
  replicas: 2
  selector:
    matchLabels:
      myevents/app: events
      myevents/tier: api
  template:
    metadata:
      labels:
        myevents/app: events
        myevents/tier: api
    spec:
      containers:
      - name: api
        imagePullPolicy: Never
        image: myevents/eventservice
        ports:
        - containerPort: 8181
          name: http
