deploy/bookings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookings
spec:
  selector:
    myevents/app: bookings
    myevents/tier: api
  ports:
  - port: 80
    targetPort: 8282
    name: http
