deploy/frontend2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector: 
    matchLabels:
      myevents/app: frontend
  template:
    metadata:
      labels:
        myevents/app: frontend
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: frontend
        image: myevents/frontend
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: shared-data
          mountPath: /etc/nginx/nginx.conf
      volumes:
      - name: shared-data
        hostPath:
          path: /Users/phoebe/go/src/rabbit/deploy/etc/nginx/nginx.conf
          # type: DirectoryOrCreate
          type: FileOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    myevents/app: frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
