deploy/frontend4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector: 
    matchLabels:
      myevents/app: frontend
  template:
    metadata:
      labels:
        myevents/app: frontend
    spec:
      #hostNetwork: true
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
      - name: frontend
        image: myevents/frontend
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: nginx-config
          mountPath: /etc/hosts
          subPath: hosts
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf   # New entry for nginx.conf2
          subPath: nginx.conf2
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf
          - key: hosts
            path: hosts
          - key: nginx.conf2                   # New entry for nginx.conf2
            path: nginx.conf2
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    myevents/app: frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
