deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myevents
  namespace: default
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-path: /
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/add-base-url: "true"
    # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: api.myevents.example
    http:
      paths:
      - path: /events
        pathType: Prefix
        backend:
          service:
            name: events
            port: 
              number: 80
      - path: /bookings(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: bookings
            port: 
              number: 80
  - host: www.myevents.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 80
